gcp/deployments/configs/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: esignet
spec:
  hosts:
    - DOMAIN
  gateways:
    - esignet-gateway
  http:
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: keycloak
            port:
              number: 80
